# juliettia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
prompts/: reply_instructions.txt
src/juliettia/: config.py  email_parser.py  gmail_client.py  logging_utils.py  main.py  mistral_client.py  reply_builder.py
tests/: test_email_parser.py  test_mistral_client.py  test_reply_builder.py
tests/fixtures/: sample_message.json
